fix(shell): Allow a single detached shell-panel at the end in content-behind mode (#5000)
* fix(shell): Allow a single detached shell-panel at the end in content-behind mode (#4156)

* cleanup story

* cleanup demo

* update deprecation doc

* rename slots

* Revert "rename slots"

This reverts commit b5679cef0aab7de183058dbc5386ff6c5bd3b0ab.

--- a/src/components/shell/shell.scss
+++ b/src/components/shell/shell.scss
@@ -65,6 +65,10 @@
   @apply text-n2-wrap font-normal;
 }
 
+slot[name="panel-end"]::slotted(calcite-shell-panel) {
+  margin-inline-start: auto;
+}
+
 ::slotted(calcite-shell-panel),
 ::slotted(calcite-shell-center-row) {
   @apply relative;
